welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: Boolean.type does not take parameters
def positionFinale() = Boolean{
                              ^SnakeBuggle:25: error: Unit does not take parameters
      else(){
            ^